Re-upload Final Changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- OUTSTANDING: NEED TO STILL CONTIMUE TO WORK ON PAUSING/ANIMATING THE GIFS' CODE.(SEE ROWS 106-121).  -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -63,7 +61,7 @@
 
     <div class="container">
         <h1>I Feel................</h1>
-        
+
         <!-- Rendered Buttons will get Dumped Here  -->
         <div id="buttons-view"></div>
 
@@ -82,8 +80,9 @@
         <script type="text/javascript">
             // Variable to hold array of emotion gifs
 
-            var emotions = ["Ecstatic","Sad", "Happy", "Tired", "Surprised", "Unimpressed", "Bored"];
+            var emotions = ["Ecstatic", "Sad", "Happy", "Tired", "Surprised", "Unimpressed", "Bored"];
 
+            // Function for creating and populating new buttons
             function populateButtons(array, classAdd, areaToAddTo) {
                 $(areaToAddTo).empty()
 
@@ -98,6 +97,8 @@
             }
             // Function for dumping the JSON content for each button into the div
             function displayEmotionInfo() {
+
+                // Method to replace dipslayed gifs with newly selected emtion gif
                 $("#emotions-view").empty()
                 var emotions = $(this).attr("data-name");
                 var queryURL = "https://api.giphy.com/v1/gifs/search?q=%22%20+%20" + emotions + "&api_key=LInBq7ghjEbNYf9NRW6fMJh4O7VMvBU4&limit=10";
@@ -118,6 +119,8 @@
                             var pOne = $("<p>").text("Rating: " + rating);
                             // Displaying the rating
                             emotionDiv.append(pOne);
+                            // Giving the image tag an src attribute of a property pulled off the
+                            // result item
                             var animated = results[i].images.fixed_height.url;
                             var still = results[i].images.fixed_height_still.url;
 
@@ -130,9 +133,7 @@
                             personImage.attr("data-state", "still")
                             personImage.attr("data-state", "animate")
                             personImage.addClass("person-img")
-                            // Giving the image tag an src attribute of a property pulled off the
-                            // result item
-                            // personImage.attr("src", results[i].images.fixed_height.url);
+
                             // Appending the image
                             emotionDiv.append(personImage);
                             // Putting the entire emotion gifs above the previous emotion gifs
@@ -141,7 +142,9 @@
                     }
                 });
 
-$(document).on("click", ".person-img", function () {
+                // Function for alternating animating/still of the gifs when clicked on 
+
+                $(document).on("click", ".person-img", function () {
 
                     let state = $(this).attr("data-state");
 
@@ -154,7 +157,7 @@ $(document).on("click", ".person-img", function () {
                     }
                 });
 
-               
+
             }
             // Function for displaying emotion gifs data
             function renderButtons() {
